# VUT-FIT

./: README.md
1.bit/IVS/: .gitignore
2.bit/IAL/2/: CMakeLists.txt
2.bit/IAL/2/btree/: test.c
2.bit/IAL/2/btree/iter/: btree - Copy.c  btree.c
2.bit/IAL/2/btree/rec/: btree.c  test
2.bit/IAL/2/hashtable/: hashtable.c
2.bit/ICS/: .gitignore  ICS.sln  README.md
2.bit/ICS/ICS.APP/: App.xaml  App.xaml.cs  AppSettings.json  ICS.App.csproj
2.bit/ICS/ICS.BL/: BusinessLogic.cs  ICS.BL.csproj  ServicecollectionExtension.cs
2.bit/ICS/ICS.BL.Tests/: CRUDFacadeTestsBase.cs  CarpoolsFacadeTests .cs  CarsFacadeTests .cs  ICS.BL.Tests.csproj  RidesFacadeTests .cs  UsersFacadeTests.cs
2.bit/ICS/ICS.Common/: ICS.Common.csproj
2.bit/ICS/ICS.Common.Tests/: DeepAssert.cs  ICS.Common.Tests.csproj  ICSTestingDbContext.cs  ObjectEqualException.cs  XUnitTestOutputConverter.cs
2.bit/ICS/ICS.DAL/: ICS.DAL.csproj  ICSDbContext.cs
2.bit/ICS/ICS.DAL.Tests/: DbContextCarTests.cs  DbContextRidesTests.cs  DbContextTestsBase.cs  DbContextUserTests.cs  ICS.DAL.Tests.csproj
2.bit/IDS/2/: xszabo16_xklofe01.sql
2.bit/IDS/3/: xszabo16_xklofe01.sql
2.bit/IDS/4/: xszabo16_xklofe01.sql
2.bit/IDS/5/: main.tex
2.bit/IPK/Sniffer/: Makefile  (+1 more)
2.bit/IPP/: interpret.py  parse.php  readme2.md  test.php
3.bit/IMS/: Makefile  README.md
3.bit/ITU-IIS/: .env  .gitignore  README.md  azure-pipelines.yml  composer.json  doc.html  package-lock.json  package.json  webpack.config.js
3.bit/IW5/: FoodDelivery-Api-CD.yml  FoodDelivery-Web-CD.yml  FoodDelivery.sln  azure-pipelines.yml
(+536 files in other folders)
